fix(novu-bridge): review blockers — provider admin scoped to the state, fail-closed in-use guard, admin-only sends
From the #2097 reviews (Kanav's blockers 1-3, Vinoth's bridge findings).

Access
- An admin role counts only when it is held at a state tenant; a city admin can
  no longer rename, rotate, disable or delete the provider the state uses.
- /providers/test-send and /dispatch/_dry-run (which can really send) are on
  the admin tier.
- /logs and /config/source answer only for the caller's own tenants (a state
  user: the state and its cities); anything else is 403 NB_TENANT_NOT_ALLOWED.
- The SMSCountry adapter refuses an apiUrl off the allowlist with 400
  NB_ADAPTER_URL_NOT_ALLOWED instead of posting the credentials to the default
  host; the same check runs when the provider is saved.

Provider in-use guard (_delete and _update active:false)
- tenantId is required; channel rows are read from MDMS at call time (never
  only the cache), matched on identifier or Novu _id, for the request's state,
  the caller's admin states, every state this instance has sent for and the
  core-SMS default. In use, or MDMS unreadable: 409 NB_PROVIDER_IN_USE.

Delivery
- The resolver checks the ledger before its contact gate and never downgrades
  a SENT/DELIVERED row, so a replay cannot resend.
- Novu's transactionId is read from inside its data wrapper, so provider_ref
  is stored; a channel pinned by Novu _id triggers with the identifier.
- An actor with no type is looked up as EMPLOYEE, then CITIZEN.
- A null template body stays null and falls back to the default locale.
- Empty masters are cached; language preferences are paged; the placeholder
  Novu key warning covers the shipped default.
- Core SMS numbers are E.164 (+, country code normalised, one trunk 0), with a
  startup warning when the country code is blank; the core-SMS DLQ path can no
  longer throw out of the listener on a central instance.

Contract
- openapi.yaml and the error codes describe the new 400/403